--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,3 +14,19 @@ button {
   background-color: transparent;
   border: none;
 }
+
+form {
+  max-width: 40rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2rem;
+  font-size: 2rem;
+  .input__container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+  }
+}
