--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
 //Base
 @import './base/normalize';
 @import './base/base';
+
+//Components
+@import './components/Error';
+@import './components/User';
