--- a/src/styles/components/_User.scss
+++ b/src/styles/components/_User.scss
@@ -6,7 +6,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0 1rem;
     column-gap: 2rem;
+    row-gap: 2rem;
   }
   &__item {
     width: 20rem;
